--- a/index.html
+++ b/index.html
@@ -141,28 +141,28 @@
     <div class="dead-center">
         <h1 class="text-white title">Liquid Geometry</span></h1>
         <h3 class="text-danger">the go-to site for geometry and algebra</h3>
-        <div class="d-inline-flex">
+        <div class="d-inline-flex button-group">
             <form action="https://github.com/liquid-geometry" target="_blank">
-                <button class="btn btn-dark homebutton">
+                <button class="btn btn-dark">
                     <i class="bi bi-github"></i>
                     GitHub
                 </button>
             </form>
             <form action="https://github.com/liquid-geometry/liquidgeometry/issues" target="_blank">
-                <button class="btn btn-warning homebutton">
+                <button class="btn btn-warning">
                     <i class="bi bi-bug-fill"></i>
                     Report a Bug
                 </button>
             </form>
             <form action="https://github.com/liquid-geometry/liquidgeometry/issues" target="_blank">
-                <button class="btn btn-success homebutton">
+                <button class="btn btn-success">
                     <i class="bi bi-lightbulb"></i>
                     Suggest an Idea
                 </button>
             </form>
             </div>
             <form action="https://www.lqgm.cf/doge" target="_blank">
-                <button class="btn btn-info homebutton" id="lol"  data-toggle="tooltip" data-placement="bottom" title="Sponsored">
+                <button class="btn btn-info sponsor-button" id="lol"  data-toggle="tooltip" data-placement="bottom" title="Sponsored">
                     <i class="bi bi-cash-stack"></i>
                     Buy DogeCoin
                 </button>
