--- a/404.html
+++ b/404.html
@@ -150,15 +150,15 @@
             <h2 class="text-white error">Error 404</h2>
         </div>
         <h4 class="text-white">it seems that the page <i id="url"></i> does not exist on this server...</h4>
-        <div class="d-inline-flex">
+        <div class="d-inline-flex button-group">
             <form action="index.html">
-                <button class="btn btn-primary homebutton">
+                <button class="btn btn-primary">
                     <i class="bi bi-house"></i>
                     Go to the Home Page
                 </button>
             </form>
             <form action="https://github.com/liquid-geometry/liquidgeometry/issues" target="_blank">
-                <button class="btn btn-warning homebutton">
+                <button class="btn btn-warning">
                     <i class="bi bi-bug-fill"></i>
                     Report a Bug
                 </button>
