minor contact form improvements

--- a/contact.html
+++ b/contact.html
@@ -140,8 +140,9 @@
         <h1 class="text-white title">Contact Liquid Geometry</h1>
         <hr class="bg-danger" style="width: 60%;" />
             <form id="contact-form" autocomplete="off">
+                <p class=" text-white"><i class="bi bi-lightbulb"></i> Tip: Include your name in the subject of the email</p>
                 <div class="center-form">
-                    <input type="text" id="subj" name="subject" placeholder="Subject" class="form-control mb-0"/>
+                    <input type="text" id="subj" name="subject" placeholder="Subject (Include First and Last Name)" class="form-control mb-0"/>
                 </div>
                 <br>
                 <div class="center-form">
