--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
     <!-- SEO -->
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Liquid Geometry - Home</title>
+    <title>Liquid Geometry - Contact</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="title" content="Liquid Geometry">
     <meta name="keywords" content="liquidgeometry,liquid geometry,geometry,mathematics,algebra,unit converter,converter,calculator,area calculator,shapes,pyhtagoras,pythagorian theorem,theorem">
