--- a/contact.html
+++ b/contact.html
@@ -150,7 +150,7 @@
                 </div>
                     <div class="button-group" style="margin-top:10px;">
                         <input type="submit" name="send" value="Send" class="btn btn-success send-mail"/>
-                        <input type="submit" id="clear" value="Clear" class="btn btn-danger d-inline-block"/>
+                        <input type="submit" id="clear" value="Clear" class="btn btn-danger"/>
                     </div>
             </form>
     </div>
