--- a/contact.html
+++ b/contact.html
@@ -47,14 +47,15 @@
 <body>
     <!-- NAVBAR START -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="#">Liquid Geometry <span class="badge badge-danger" style="font-size: small; font-weight: 300;">ALPHA</span></a> <!-- leave this as it is -->
+        <div class="container-fluid">
+        <a class="navbar-brand" href="#">Liquid Geometry</a> <!-- leave this as it is -->
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="index.html"><i class="bi bi-house"></i> Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="index.html"><i class="bi bi-house"></i> Home</a>
                 </li>
                 <li class="nav-item dropdown active">
                     <a href="" class="nav-link" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -134,11 +135,12 @@
                 </li>
             </ul>
         </div>
+    </div>
     </nav>
     <!-- NAVBAR END -->
     <div class="center">
         <h1 class="text-white title">Contact Liquid Geometry</h1>
-        <hr class="bg-danger" style="width: 60%;" />
+        <hr class="bg-danger" style="width: 60%; margin: auto;" />
             <form id="contact-form" autocomplete="off">
                 <p class=" text-white"><i class="bi bi-lightbulb"></i> Tip: Include your name in the subject of the email</p>
                 <div class="center-form">
