--- a/equations.html
+++ b/equations.html
@@ -47,6 +47,7 @@
 <body>
     <!-- NAVBAR START -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container-fluid">
         <a class="navbar-brand" href="#">Liquid Geometry</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -134,6 +135,7 @@
                 </li>
             </ul>
         </div>
+    </div>
     </nav>
     <!-- NAVBAR END -->
     <div class="center">
