--- a/404.html
+++ b/404.html
@@ -35,7 +35,7 @@
             display: inline-flex; 
             padding: 5px;
             border-radius: 5px;
-            background-color: var(--danger);
+            background-color: var(--bs-danger);
         }
     </style>
     <!-- SCRIPTS -->
