--- a/404.html
+++ b/404.html
@@ -55,7 +55,7 @@
     <!-- NAVBAR START -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
-        <a class="navbar-brand" href="#">Liquid Geometry</a>
+        <a class="navbar-brand" href="https://www.liquidgeometry.tk">Liquid Geometry</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
