fixed sponsored button

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
             </div>
             <form action="https://www.lqgm.cf/doge" target="_blank">
                 <button class="btn btn-info sponsor-button" id="lol"  data-toggle="tooltip" data-placement="bottom" title="Sponsored">
-                    <i class="bi bi-coin"></i>
+                    <i class="bi bi-currency-bitcoin"></i>
                     Buy DogeCoin
                 </button>
             </form>
