--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <!-- SEO -->
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Liquid Geometry - Home</title>
+    <title>Liquid Geometry</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="title" content="Liquid Geometry">
     <meta name="keywords" content="liquidgeometry,liquid geometry,liquid-geometry,geometry,mathematics,math,algebra,unitconverter,unit converter,converter,calculator,area calculator,shapes,geometry,geometrical,highschool,math cheat sheet,pyhtagoras,pythagorian theorem,theorem,cheat sheet,math,equations,equation,solver,equation solver">
