--- a/tos.html
+++ b/tos.html
@@ -141,11 +141,47 @@
         <h2>Terms of Service(ToS)</h2>
         <section id="intro">
         <p>Your privacy is important to us. It is Liquid Geometry&#39;s policy to respect your privacy and comply with any applicable law and regulation regarding any personal information we may collect about you, including across our website, <a href="https://www.liquidgeometry.tk">https://www.liquidgeometry.tk</a>, and other sites we own and operate. </p>
-        <p>This policy is effective as of 20 April 2021 and was last updated on 20 April 2021. </p>
+        <p>This policy is effective as of 20 April 2021 and was last updated on 20 May 2021. </p>
         </section>
         <section id="info-we-collect">
         <h3>Information We Collect</h3>
         <p>Information we collect includes both information you knowingly and actively provide us when using or participating in any of our services and promotions, and any information automatically sent by your devices in the course of accessing our products and services. </p>
+        <table class="table table-bordered text-white">
+            <thead>
+                <tr>
+                    <th>Category</th>
+                    <th>Collected*</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>Page Views</td>
+                    <td>Yes</td>
+                </tr>
+                <tr>
+                    <td>Usage statistics across the website</td>
+                    <td>Yes</td>
+                </tr>
+                <tr>
+                    <td>LogIn's</td>
+                    <td>Yes</td>
+                </tr>
+                <tr>
+                    <td>LogOut's</td>
+                    <td>Yes</td>
+                </tr>
+                <tr>
+                    <td>Email</td>
+                    <td>No</td>
+                </tr>
+                <tr>
+                    <td>Time Spent across the website</td>
+                    <td>No</td>
+                </tr>
+            </tbody>
+        </table>
+        <p>*everything is stored in your browser in the form of cookies. We do not have access to this info.</p>
+        </section>
         <section id="security-of-data">
         <h4>Security of Your Personal Information</h4>
         <p>When we collect and process personal information, and while we retain this information, we will protect it within commercially acceptable means to prevent loss and theft, as well as unauthorized access, disclosure, copying, use, or modification. </p>
