--- a/index.html
+++ b/index.html
@@ -126,7 +126,9 @@
                         <a href="" class="dropdown-item"><div class="g-signin2" data-onsuccess="onSignIn"></div></a>
                         <a href="" class="dropdown-item"><span id="profile-photo"><i class="bi bi-person-circle"></i></span> <span id="display">Not Signed In</span></a>
                         <a href="" class="dropdown-item" onclick="signOut();" id="signout"><i class="bi bi-door-closed"></i> Sign out</a>
+                        <div class="dropdown-divider"></div>
                         <a href="tos.html" class="dropdown-item"><i class="bi bi-card-checklist"></i> Terms of Use</a>
+                        <a href="stats.html" class="dropdown-item"><i class="bi bi-graph-up"></i> Stats</a>
                     </div>
                 </li>
                 <li class="nav-item">
@@ -178,9 +180,15 @@
     <script src="OAuth/OnSignOut.js"></script>
     <script src="js/release.js"></script>
     <script>
-        $("#close-alert").click(function (e) { 
-            e.preventDefault();
-            $("#map-alert").fadeOut();
+        var myStorage = window.localStorage, pageCount;
+        window.addEventListener('load', function(){
+            if(!myStorage.getItem("pageCount")){
+                myStorage.setItem('pageCount', 1);
+            } else {
+                pageCount = myStorage.getItem("pageCount");
+                pageCount = parseFloat(pageCount) + parseFloat(1);
+                myStorage.setItem('pageCount', pageCount );
+            }
         });
     </script>
     <script>
