--- a/stats.html
+++ b/stats.html
@@ -142,13 +142,13 @@
     </div>
     </nav>
     <!-- NAVBAR END -->
-    <div class="stats">
+    <div class="container-sm">
         <h1 class="text-white title">Liquid Stats</h1>
         <hr class="bg-danger" />
         <button class="btn btn-success" style="margin-right: 20px; margin-bottom: 20px; margin-bottom: 20px;">Refresh Stats <i class="bi bi-arrow-clockwise"></i></button>
         <button class="btn btn-danger" style="margin-right: 20px; margin-bottom: 20px; margin-bottom: 20px;">Reset Stats <i class="bi bi-trash-fill"></i></button>
         <p class="text-white">Total Visits: <span id="page-views"></span></p>
-        <p class="text-white">Total Statistic Page Views: <span id="stat-views"></span></p>
+        <p class="text-white">Total Statistics Page Views: <span id="stat-views"></span></p>
         <p class="text-white">Total Equations Solved: <span id="equations-solved"></span></p>
         <p class="text-white">Total Formulas Page Views: <span id="formulas-views"></span></p>
     </div>
@@ -168,8 +168,6 @@
             $("#page-views").text(pageviews);
             $("#equations-solved").text(equations);
             $("#formulas-views").text(formulas);
-        });
-        window.addEventListener('load', function(){
             if(!myStorage.getItem("statCount")){
                 myStorage.setItem('statCount', 1);
             } else {
