--- a/404.html
+++ b/404.html
@@ -178,7 +178,7 @@
             var url = window.location.pathname;
             $("#url").text(url.replace('/', ''));
             console.error('ERROR 404 LIQUID GEOMETRY');
-            console.error('the page ' + window.location.pathname + ' does not exists. It may have been moved, edited or deleted.')
+            console.error('the page ' + window.location.pathname + ' does not exists. It may have been moved, edited or deleted.');
         });
     </script>
     <noscript><strong class="noscript">You have to enable JavaScript to run this app.</strong></noscript>
