--- a/stats.html
+++ b/stats.html
@@ -145,8 +145,8 @@
     <div class="container-sm">
         <h1 class="text-white title">Liquid Stats</h1>
         <hr class="bg-danger" />
-        <button class="btn btn-success" style="margin-right: 20px; margin-bottom: 20px; margin-bottom: 20px;">Refresh Stats <i class="bi bi-arrow-clockwise"></i></button>
-        <button class="btn btn-danger" style="margin-right: 20px; margin-bottom: 20px; margin-bottom: 20px;">Reset Stats <i class="bi bi-trash-fill"></i></button>
+        <button class="btn btn-success" onclick="loadStats()" style="margin-right: 20px; margin-bottom: 20px; margin-bottom: 20px;">Refresh Stats <i class="bi bi-arrow-clockwise"></i></button>
+        <button class="btn btn-danger" onclick="clearStats()" style="margin-right: 20px; margin-bottom: 20px; margin-bottom: 20px;">Reset Stats <i class="bi bi-trash-fill"></i></button>
         <p class="text-white">Total Visits: <span id="page-views"></span></p>
         <p class="text-white">Total Statistics Page Views: <span id="stat-views"></span></p>
         <p class="text-white">Total Equations Solved: <span id="equations-solved"></span></p>
@@ -158,26 +158,7 @@
     <script src="OAuth/SignIn.js"></script>
     <script src="OAuth/SignOut.js"></script>
     <script src="OAuth/OnSignOut.js"></script>
-    <script src="js/release.js"></script>
-    <script>
-        var myStorage = window.localStorage, pageCount;
-        $(document).ready(function () {
-            const pageviews  = myStorage.getItem("pageCount");
-            const equations = myStorage.getItem("equation");
-            const formulas = myStorage.getItem("formulas");
-            $("#page-views").text(pageviews);
-            $("#equations-solved").text(equations);
-            $("#formulas-views").text(formulas);
-            if(!myStorage.getItem("statCount")){
-                myStorage.setItem('statCount', 1);
-            } else {
-                statCount = myStorage.getItem("statCount");
-                statCount = parseFloat(statCount) + parseFloat(1);
-                myStorage.setItem('statCount', statCount );
-            }
-            $("#stat-views").text(myStorage.getItem("statCount"));
-        });
-    </script>
+    <script src="js/stats.js"></script>
     <script>
         $(function () {
             $('[data-toggle="tooltip"]').tooltip()
