--- a/tos.html
+++ b/tos.html
@@ -122,7 +122,9 @@
                         <a href="" class="dropdown-item"><div class="g-signin2" data-onsuccess="onSignIn"></div></a>
                         <a href="" class="dropdown-item"><i class="bi bi-person-circle"></i> <span id="display">Not Signed In</span></a>
                         <a href="" class="dropdown-item" onclick="signOut();" id="signout"><i class="bi bi-door-closed"></i> Sign out</a>
+                        <div class="dropdown-divider"></div>
                         <a href="tos.html" class="dropdown-item aactive"><i class="bi bi-card-checklist"></i> Terms of Use</a>
+                        <a href="stats.html" class="dropdown-item"><i class="bi bi-graph-up"></i> Stats</a>
                     </div>
                 </li>
                 <li class="nav-item">
@@ -141,11 +143,12 @@
         <h2>Terms of Service(ToS)</h2>
         <section id="intro">
         <p>Your privacy is important to us. It is Liquid Geometry&#39;s policy to respect your privacy and comply with any applicable law and regulation regarding any personal information we may collect about you, including across our website, <a href="https://www.liquidgeometry.tk">https://www.liquidgeometry.tk</a>, and other sites we own and operate. </p>
-        <p>This policy is effective as of 20 April 2021 and was last updated on 20 May 2021. </p>
+        <p>This policy is effective as of 20 April 2021 and was last updated on 21 May 2021.</p>
         </section>
         <section id="info-we-collect">
         <h3>Information We Collect</h3>
         <p>Information we collect includes both information you knowingly and actively provide us when using or participating in any of our services and promotions, and any information automatically sent by your devices in the course of accessing our products and services. </p>
+        <p>Please note that we use third-party services in our website such as Google OAuth(LogIn with Google) and PostMail. By using our website you knowingly agree with their Terms of Service as well.</p>
         <table class="table table-bordered text-white">
             <thead>
                 <tr>
@@ -181,18 +184,14 @@
             </tbody>
         </table>
         <p>*everything is stored in your browser in the form of cookies. We do not have access to this info.</p>
+        <p>If you no longer wish to have this information stored, you can delete them at anytime in the <a href="stats.html">stats page</a></p>
         </section>
         <section id="security-of-data">
         <h4>Security of Your Personal Information</h4>
-        <p>When we collect and process personal information, and while we retain this information, we will protect it within commercially acceptable means to prevent loss and theft, as well as unauthorized access, disclosure, copying, use, or modification. </p>
+        <p>We do not store or process any of your personal information. Everything happens in your browser</p>
         <p>Although we will do our best to protect the personal information you provide to us, we advise that no method of electronic transmission or storage is 100% secure, and no one can guarantee absolute data security. We will comply with laws applicable to us in respect of any data breach. </p>
         <p>You are responsible for selecting any password and its overall security strength, ensuring the security of your own information within the bounds of our services. </p>
-        </section>
-        <section id="how-long-we-keep-your-data">
-        <h4>How Long We Keep Your Personal Information</h4>
-        <p>We keep your personal information only for as long as we need to. This time period may depend on what we are using your information for, in accordance with this privacy policy. If your personal information is no longer required, we will delete it or make it anonymous by removing all details that identify you. </p>
-        <p>However, if necessary, we may retain your personal information for our compliance with a legal, accounting, or reporting obligation or for archiving purposes in the public interest, scientific, or historical research purposes or statistical purposes. </p>
-        </section>    
+        </section>   
         </section>
         <section id="childrens-privacy">
         <h3>Children’s Privacy</h3>
@@ -236,7 +235,7 @@
         <h3>Contact Us</h3>
         <p>For any questions or concerns regarding your privacy, you may contact us using the following details: </p>
         <p>
-            Damian Katsios<br />
+            <a href="https://dkatsios.ml" target="_blank">Damian Katsios</a><br />
             hello@dkatsios.tk
         </p>
         <p>
