fixed typo in ToS

--- a/tos.html
+++ b/tos.html
@@ -144,7 +144,7 @@
         <h2>Terms of Service(ToS)</h2>
         <section id="intro">
         <p>Your privacy is important to us. It is Liquid Geometry&#39;s policy to respect your privacy and comply with any applicable law and regulation regarding any personal information we may collect about you, including across our website, <a href="https://www.liquidgeometry.tk">https://www.liquidgeometry.tk</a>, and other sites we own and operate. </p>
-        <p>This policy is effective as of 20 April 2021 and was last updated on 21 May 2021.</p>
+        <p>This policy is effective as of 20 April 2021 and was last updated on 23 May 2021.</p>
         </section>
         <section id="info-we-collect">
         <h3>Information We Collect</h3>
@@ -247,7 +247,7 @@
             Corporation<br />
             liquid-geometry@dkatsios.tk
         </p>
-        <p>Or uaw our <a href="contact.html">Contact Form</a></p>
+        <p>Or use our <a href="contact.html">Contact Form</a></p>
         </section>
     </div>
     <!-- TOS END -->
