--- a/contact.html
+++ b/contact.html
@@ -179,7 +179,8 @@
                     setTimeout(iamspeed = () => {
                         $("#clear").val('Clear');
                         $("#clear").prop('disabled',false);
-                        }, 6500);
+                        counter = 0;
+                        }, 8000);
                 }
                 const subj = $("#subj").val();
                 const msg = $("#msg").val();
