added shape visualizer and maintenance

--- a/atrapezoid.html
+++ b/atrapezoid.html
@@ -158,13 +158,14 @@
         </div>
         <br />
         <div class="center-form">
-            <button class="btn btn-primary btn-lg" id="button">Calculate</button>
+            <button class="btn btn-success btn-lg" id="button">Calculate</button>
         </div>
         <br />
         <div style="max-height: 1em;">
             <p class="text-success" id="output"></p>
         </div>
         <br />
+        <div id="shape" class="dynamic-shape-trap" title="shape visualization"></div>
         <div class="formula">
             <b class="text-white show-formula"><u>show formula</u></b>
             <p id="formula" class="text-white">
