--- a/formulas.html
+++ b/formulas.html
@@ -143,7 +143,7 @@
         <h1 class="text-white title">Liquid Formulas</h1>
         <hr class="bg-danger" style="width: 70%;" />
         <section id="trigonometry">
-        <h3 class="text-white">Τrigonometric Νumbers</h3>
+        <h3 class="text-white" id="trig-num">Τrigonometric Νumbers <i id="copy" title="copy to clipboard" class="bi bi-clipboard"></i></h3>
         <table class="table table-bordered text-white formulas-table">
             <thead class="bg-primary head">
                 <tr>
@@ -189,6 +189,7 @@
     <script src="OAuth/SignIn.js"></script>
     <script src="OAuth/SignOut.js"></script>
     <script src="OAuth/OnSignOut.js"></script>
+    <script src="js/copy.js"></script>
     <script>
         var myStorage = window.localStorage, formulas;
         $(document).ready(function () {
