--- a/phypotenuse.html
+++ b/phypotenuse.html
@@ -153,7 +153,7 @@
         </div>
         <br />
         <div class="center-form">
-            <button class="btn btn-primary btn-lg" id="button">Calculate</button>
+            <button class="btn btn-success btn-lg" id="button">Calculate</button>
         </div>
         <br />
         <div style="max-height: 1em;">
