--- a/equations.html
+++ b/equations.html
@@ -155,7 +155,7 @@
         </div>
         <br>
         <div class="center-form">
-            <button class="btn btn-primary btn-lg equation" id="button">Solve for x</button>
+            <button class="btn btn-success btn-lg equation" id="button">Solve for x</button>
         </div>
         <br />
         <div style="max-height: 1em;">
@@ -175,7 +175,7 @@
         </div>
         <br>
         <div class="center-form">
-            <button class="btn btn-primary btn-lg equation" id="button2">Solve for x</button>
+            <button class="btn btn-success btn-lg equation" id="button2">Solve for x</button>
         </div>
         <br />
         <div style="max-height: 1em;">
@@ -195,7 +195,7 @@
         </div>
         <br>
         <div class="center-form">
-            <button class="btn btn-primary btn-lg equation" id="button3">Solve for x</button>
+            <button class="btn btn-success btn-lg equation" id="button3">Solve for x</button>
         </div>
         <br />
         <div style="max-height: 1em;">
