--- a/acircle.html
+++ b/acircle.html
@@ -155,7 +155,10 @@
             <p class="text-success" id="output"></p>
         </div>
         <br>
-        <div id="shape" class="dynamic-shape-circle" title="shape visualization"></div>
+        <br>
+        <div>
+            <div id="shape" class="dynamic-shape-circle" title="shape visualization"></div>
+        </div>
         <div class="formula">
             <b class="text-white show-formula"><u>show formula</u></b>
             <p id="formula" class="text-white">
