--- a/contact.html
+++ b/contact.html
@@ -153,7 +153,7 @@
                 <div class="center-form">
                     <textarea id="msg" name="text" placeholder="Message" class="form-control message" required></textarea>
                 </div>
-                    <div class="button-group" style="margin-top:10px;">
+                    <div class="button-group" style="margin-top:10px; margin-bottom:10px;">
                         <input type="submit" name="send" value="Send" class="btn btn-success send-mail"/>
                         <input type="submit" id="clear" value="Clear" class="btn btn-danger"/>
                     </div>
